hphp/hack/test/typecheck/variadic_args7.php.exp
File "variadic_args7.php", line 3, characters 27-27:
A variadic parameter `...` may not be followed by a comma. (Parsing[1002])
File "variadic_args7.php", line 6, characters 19-20:
Invalid argument (Typing[4110])
File "variadic_args7.php", line 3, characters 22-26:
Expected `string` (variadic argument)
File "variadic_args7.php", line 6, characters 19-20:
But got `int`
